# CLAD

./: .gitignore  DSL_ADVANCED_FEATURES.md  PHASE8_DESIGN.md  PHASE8_IMPLEMENTATION_LOG.md  PHASE9_10_IMPLEMENTATION.md  README.md  SELECTOR_REFERENCE.md  STATUS.md  USER_GUIDE.md  WORKFLOW_GUIDE.md  clad.asd  clad.asd.backup  composite-example.step  curved-tube.step  design_guide.md  design_guide_extended.md  load-test.lisp  loft-ruled-example.step  loft-smooth-example.step  mirror-example.step  pipe-example.step  regenerate-model.lisp  run-tests.lisp  start-viewer.lisp  sweep-example.step  test-debug.lisp  test-library-load.lisp  test-occt-integration.lisp  test-step-export.lisp  test-vase-export.step  test-viewer-complete.lisp  test-viewer-quick.lisp  test-viewer.lisp
c-wrapper/: CMakeLists.txt  build.sh  occt-wrapper.cpp  occt-wrapper.h
examples/: 01-basic-dsl.lisp  02-patterns.lisp  03-fillets-chamfers.lisp  04-advanced-features.lisp  05-assemblies.lisp  06-advanced-selectors.lisp  06-sketches.lisp  README.md  advanced-features-demo.lisp  advanced-sweeps-lofts-mirror.lisp  composite-example.step  curves-demo.lisp  dsl-advanced-features-demo.lisp  dsl-demo.lisp  fillet-chamfer-demo.lisp  interactive-demo.lisp  loft-ruled-example.step  loft-smooth-example.step  mirror-example.step  mounting-bracket.lisp  pipe-example.step  simple-plate.lisp  sweep-example.step  test-auto-rebuild.lisp
src/: packages.lisp
src/assembly/: assembly.lisp  bom.lisp  constraints.lisp  dsl.lisp  solver.lisp  view.lisp
src/auto-rebuild/: auto-rebuild.lisp
src/context/: context.lisp
src/core/: advanced-ops.lisp  booleans.lisp  curves.lisp  fillets.lisp  primitives.lisp  transformations.lisp
src/dsl/: deffeature.lisp  defpart.lisp  patterns.lisp
src/export/: step.lisp
src/ffi/: advanced-ops.lisp  booleans.lisp  curves.lisp  exception-handling.lisp  export.lisp  fillets.lisp  memory-management.lisp  primitives.lisp  queries.lisp  transformations.lisp  types.lisp
src/selectors/: api.lisp  base.lisp  combinators.lisp  custom.lisp  direction.lisp  geometric.lisp  size.lisp  type.lisp  utilities.lisp
src/shapes/: classes.lisp  methods.lisp
src/sketch/: constraints.lisp  conversion.lisp  dsl.lisp  entities.lisp  solver.lisp  validation.lisp
src/units/: conversions.lisp  dimension.lisp  units.lisp
src/viewer/: server.lisp
src/workplane/: workplane.lisp
tests/: advanced-features-tests.lisp  assembly-tests.lisp  context-tests.lisp  core-tests.lisp  dsl-tests.lisp  ffi-tests.lisp  package.lisp  selector-tests.lisp  shapes-tests.lisp  sketch-tests.lisp  test-suite.lisp  units-tests.lisp  workplane-tests.lisp
viewer/: index.html
